components/policies/production/policies/kueue/deny-unallowed-annotations/deny-unallowed-annotations-validatingadmissionpolicybinding.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: deny-unallowed-annotations.kueue.konflux-ci.dev
spec:
  policyName: "deny-unallowed-annotations.kueue.konflux-ci.dev"
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        konflux-ci.dev/type: tenant
